<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addTicketData"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/buttonAddPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_photo"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/expiration_date"
        android:inputType="text"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/expiration_time"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextLicense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/license_number"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:inputType="text" />


    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/buttonSaveTicket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_ticket"
        android:layout_marginTop="16dp" />

</LinearLayout>
